--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,10 @@
     "require-dev": {
         "jakub-onderka/php-console-highlighter": "^0.3.2",
         "jakub-onderka/php-parallel-lint": "^1.0",
+        "mockery/mockery": "^1.1",
         "nicwortel/coding-standard": "^1.1",
-        "phpstan/phpstan": "^0.10.3"
+        "phpstan/phpstan": "^0.10.3",
+        "phpunit/phpunit": "^7.3"
     },
     "config": {
         "sort-packages": true
@@ -18,6 +20,11 @@
     "autoload": {
         "psr-4": {
             "NicWortel\\CommandPipeline\\": "src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "NicWortel\\CommandPipeline\\Tests\\Unit\\": "tests/unit"
         }
     }
 }
