--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
     "description": "A command pipeline for PHP",
     "license": "MIT",
     "require": {
-        "php": "^7.2"
+        "php": "^7.2",
+        "beberlei/assert": "^3.2"
     },
     "require-dev": {
         "jakub-onderka/php-console-highlighter": "^0.3.2",
