--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
     "license": "MIT",
     "require": {
         "php": "^7.2",
-        "beberlei/assert": "^3.2"
+        "beberlei/assert": "^3.2",
+        "psr/log": "^1.1"
     },
     "require-dev": {
         "jakub-onderka/php-console-highlighter": "^0.4.0",
