--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "doctrine/orm": "^2.6",
         "psr/log": "^1.1",
         "simple-bus/message-bus": "^3.0",
+        "symfony/http-kernel": "^4.3",
         "symfony/validator": "^4.3"
     },
     "require-dev": {
@@ -16,6 +17,7 @@
         "doctrine/cache": "^1.8",
         "jakub-onderka/php-console-highlighter": "^0.4.0",
         "jakub-onderka/php-parallel-lint": "^1.0",
+        "matthiasnoback/symfony-dependency-injection-test": "^4.0",
         "mockery/mockery": "^1.1",
         "nicwortel/coding-standard": "^1.1",
         "phpstan/phpstan": "^0.11.12",
