--- a/composer.json
+++ b/composer.json
@@ -5,12 +5,12 @@
     "license": "MIT",
     "require": {
         "php": "^7.2",
-        "beberlei/assert": "^3.2",
+        "beberlei/assert": "^2.1|^3.0",
         "doctrine/orm": "^2.6",
         "psr/log": "^1.1",
         "simple-bus/message-bus": "^3.0",
-        "symfony/http-kernel": "^4.3",
-        "symfony/validator": "^4.3"
+        "symfony/http-kernel": "^4.0",
+        "symfony/validator": "^4.0"
     },
     "require-dev": {
         "doctrine/annotations": "^1.6",
@@ -18,7 +18,7 @@
         "jakub-onderka/php-console-highlighter": "^0.4.0",
         "jakub-onderka/php-parallel-lint": "^1.0",
         "matthiasnoback/symfony-dependency-injection-test": "^4.0",
-        "mockery/mockery": "^1.1",
+        "mockery/mockery": "^1.2.1",
         "nicwortel/coding-standard": "^1.1",
         "phpstan/phpstan": "^0.11.12",
         "phpunit/phpunit": "^8.3"
