--- a/composer.json
+++ b/composer.json
@@ -6,9 +6,13 @@
     "require": {
         "php": "^7.2",
         "beberlei/assert": "^2.1|^3.0",
+        "doctrine/doctrine-bundle": "^1.11",
         "doctrine/orm": "^2.6",
         "psr/log": "^1.1",
         "simple-bus/message-bus": "^3.0",
+        "simple-bus/symfony-bridge": "^5.3",
+        "symfony/config": "^4.0",
+        "symfony/dependency-injection": "^4.0",
         "symfony/http-kernel": "^4.0",
         "symfony/validator": "^4.0"
     },
@@ -17,11 +21,11 @@
         "doctrine/cache": "^1.8",
         "jakub-onderka/php-console-highlighter": "^0.4.0",
         "jakub-onderka/php-parallel-lint": "^1.0",
-        "matthiasnoback/symfony-dependency-injection-test": "^4.0",
         "mockery/mockery": "^1.2.1",
         "nicwortel/coding-standard": "^1.1",
         "phpstan/phpstan": "^0.11.12",
-        "phpunit/phpunit": "^8.3"
+        "phpunit/phpunit": "^8.3",
+        "symfony/framework-bundle": "^4.0"
     },
     "config": {
         "sort-packages": true
