--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,8 @@
     "autoload-dev": {
         "psr-4": {
             "NicWortel\\CommandPipeline\\Tests\\Unit\\": "tests/unit",
-            "NicWortel\\CommandPipeline\\Tests\\Integration\\": "tests/integration"
+            "NicWortel\\CommandPipeline\\Tests\\Integration\\": "tests/integration",
+            "NicWortel\\CommandPipeline\\Tests\\System\\": "tests/system"
         }
     }
 }
