--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "symfony/config": "^4.0",
         "symfony/dependency-injection": "^4.0",
         "symfony/http-kernel": "^4.0",
+        "symfony/security-bundle": "^4.0",
         "symfony/security-core": "^4.0",
         "symfony/validator": "^4.0"
     },
