--- a/composer.json
+++ b/composer.json
@@ -11,12 +11,12 @@
         "psr/log": "^1.1",
         "simple-bus/message-bus": "^3.0",
         "simple-bus/symfony-bridge": "^5.4",
-        "symfony/config": "^4.0",
-        "symfony/dependency-injection": "^4.0",
-        "symfony/http-kernel": "^4.0",
-        "symfony/security-bundle": "^4.0",
-        "symfony/security-core": "^4.3",
-        "symfony/validator": "^4.0"
+        "symfony/config": "^4.0 || ^5.0",
+        "symfony/dependency-injection": "^4.0 || ^5.0",
+        "symfony/http-kernel": "^4.0 || ^5.0",
+        "symfony/security-bundle": "^4.0 || ^5.0",
+        "symfony/security-core": "^4.3 || ^5.0",
+        "symfony/validator": "^4.0 || ^5.0"
     },
     "require-dev": {
         "doctrine/annotations": "^1.6",
