--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,8 @@
     "license": "MIT",
     "require": {
         "php": "^7.2",
-        "beberlei/assert": "^2.1|^3.0",
-        "doctrine/doctrine-bundle": "^2.0",
+        "beberlei/assert": "^2.1 || ^3.0",
+        "doctrine/doctrine-bundle": "^1.11 || ^2.0",
         "doctrine/orm": "^2.6.3",
         "psr/log": "^1.1",
         "simple-bus/message-bus": "^3.0",
