--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
         "nicwortel/coding-standard": "^1.1.2",
         "phpstan/phpstan": "^0.12.7",
         "phpunit/phpunit": "^8.3",
-        "symfony/framework-bundle": "^4.0"
+        "symfony/framework-bundle": "^4.0 || ^5.0"
     },
     "config": {
         "sort-packages": true
