--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,9 @@
         "phpunit/phpunit": "^8.3",
         "symfony/framework-bundle": "^4.0 || ^5.0"
     },
+    "conflict": {
+        "doctrine/doctrine-cache-bundle": "<1.3.1"
+    },
     "config": {
         "sort-packages": true
     },
