--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         "symfony/http-kernel": "^4.0 || ^5.0",
         "symfony/security-bundle": "^4.0 || ^5.0",
         "symfony/security-core": "^4.3 || ^5.0",
-        "symfony/validator": "^4.0 || ^5.0"
+        "symfony/validator": "^4.4.4 || ^5.0.4"
     },
     "require-dev": {
         "doctrine/annotations": "^1.7",
@@ -28,7 +28,8 @@
         "symfony/framework-bundle": "^4.0 || ^5.0"
     },
     "conflict": {
-        "doctrine/doctrine-cache-bundle": "<1.3.1"
+        "doctrine/doctrine-cache-bundle": "<1.3.1",
+        "doctrine/common": "<2.12"
     },
     "config": {
         "sort-packages": true
